added files for data analysis section

--- a/Data/BLS_data_2018_cleanupedited.ipynb
+++ b/Data/BLS_data_2018_cleanupedited.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,10 +671,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 67,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -770,7 +768,7 @@
        "1042  Installation, Maintenance, and Repair Occupations    25860"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1111,7 +1109,7 @@
        "580                      Healthcare Support Occupations   47950"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1882,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1977,7 @@
        "175997       Virginia   55310"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1995,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -2092,17 +2090,13 @@
        "175955     California     42430"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "State_avg_income= State_data[State_data[\"State_data [[\"occ_title\", \"a_pct25\"]].head(10) .drop_duplicates([\"occ_title\"], keep=\"first\", inplace=True) \n",
-    "State_data ['a_pct25'] = State_data ['a_pct25'].str.replace(',', '')  #remove comma in numbers\n",
-    "State_data ['a_pct25'] = State_data ['a_pct25'].str.replace('*', '0')           #convert string to integers\n",
-    "State_data .sort_values('a_pct25', ascending = False, inplace=True)\n",
-    "State_data [[\"occ_title\", \"a_pct25\"]].head(10)o_group\"] == \"total\"]\n",
+    "#State_data [[\"occ_title\", \"a_pct25\"]].head(10)o_group\"] == \"total\"]\n",
     "State_avg_income[\"a_median\"] = State_avg_income['a_median'].str.replace(',', '')  #remove comma in numbers\n",
     "State_avg_income[\"a_median\"] = State_avg_income[\"a_median\"].astype(int)     \n",
     "State_avg_income.sort_values(\"a_median\", ascending=False, inplace=True)\n",
@@ -2111,7 +2105,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>occ_title</th>\n",
+       "      <th>a_pct25</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>184227</th>\n",
+       "      <td>Lawyers</td>\n",
+       "      <td>99950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176335</th>\n",
+       "      <td>Sales Managers</td>\n",
+       "      <td>99950</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189424</th>\n",
+       "      <td>Dentists, All Other Specialists</td>\n",
+       "      <td>99940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>190011</th>\n",
+       "      <td>Physician Assistants</td>\n",
+       "      <td>99870</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176268</th>\n",
+       "      <td>Marketing Managers</td>\n",
+       "      <td>99870</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182828</th>\n",
+       "      <td>Political Scientists</td>\n",
+       "      <td>99750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>189765</th>\n",
+       "      <td>Obstetricians and Gynecologists</td>\n",
+       "      <td>99740</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176032</th>\n",
+       "      <td>Management Occupations</td>\n",
+       "      <td>99730</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176069</th>\n",
+       "      <td>Chief Executives</td>\n",
+       "      <td>99690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>180602</th>\n",
+       "      <td>Electronics Engineers, Except Computer</td>\n",
+       "      <td>99670</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     occ_title a_pct25\n",
+       "184227                                 Lawyers   99950\n",
+       "176335                          Sales Managers   99950\n",
+       "189424         Dentists, All Other Specialists   99940\n",
+       "190011                    Physician Assistants   99870\n",
+       "176268                      Marketing Managers   99870\n",
+       "182828                    Political Scientists   99750\n",
+       "189765         Obstetricians and Gynecologists   99740\n",
+       "176032                  Management Occupations   99730\n",
+       "176069                        Chief Executives   99690\n",
+       "180602  Electronics Engineers, Except Computer   99670"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#State_avg_income= State_data[State_data[\"State_data [[\"occ_title\", \"a_pct25\"]].head(10) .drop_duplicates([\"occ_title\"], keep=\"first\", inplace=True) \n",
+    "State_data ['a_pct25'] = State_data ['a_pct25'].str.replace(',', '')  #remove comma in numbers\n",
+    "State_data ['a_pct25'] = State_data ['a_pct25'].str.replace('*', '0')           #convert string to integers\n",
+    "State_data .sort_values('a_pct25', ascending = False, inplace=True)\n",
+    "State_data [[\"occ_title\", \"a_pct25\"]].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2141,8 +2247,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>184841</th>\n",
-       "      <td>Architecture Teachers, Postsecondary</td>\n",
+       "      <th>185446</th>\n",
+       "      <td>Social Sciences Teachers, Postsecondary, All O...</td>\n",
        "      <td>99990</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2151,8 +2257,8 @@
        "      <td>99990</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>185446</th>\n",
-       "      <td>Social Sciences Teachers, Postsecondary, All O...</td>\n",
+       "      <th>184841</th>\n",
+       "      <td>Architecture Teachers, Postsecondary</td>\n",
        "      <td>99990</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2166,13 +2272,13 @@
        "      <td>99960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>189163</th>\n",
-       "      <td>Media and Communication Equipment Workers, All...</td>\n",
+       "      <th>182453</th>\n",
+       "      <td>Hydrologists</td>\n",
        "      <td>99950</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>182453</th>\n",
-       "      <td>Hydrologists</td>\n",
+       "      <th>189163</th>\n",
+       "      <td>Media and Communication Equipment Workers, All...</td>\n",
        "      <td>99950</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2181,13 +2287,13 @@
        "      <td>99940</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>177694</th>\n",
-       "      <td>Business and Financial Operations Occupations</td>\n",
+       "      <th>179963</th>\n",
+       "      <td>Operations Research Analysts</td>\n",
        "      <td>99930</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>179963</th>\n",
-       "      <td>Operations Research Analysts</td>\n",
+       "      <th>179127</th>\n",
+       "      <td>Financial Specialists, All Other</td>\n",
        "      <td>99930</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2196,19 +2302,19 @@
       ],
       "text/plain": [
        "                                                occ_title a_pct75\n",
-       "184841               Architecture Teachers, Postsecondary   99990\n",
-       "181926                   Biological Scientists, All Other   99990\n",
        "185446  Social Sciences Teachers, Postsecondary, All O...   99990\n",
+       "181926                   Biological Scientists, All Other   99990\n",
+       "184841               Architecture Teachers, Postsecondary   99990\n",
        "190164                                Physical Therapists   99970\n",
        "184967         Biological Science Teachers, Postsecondary   99960\n",
-       "189163  Media and Communication Equipment Workers, All...   99950\n",
        "182453                                       Hydrologists   99950\n",
+       "189163  Media and Communication Equipment Workers, All...   99950\n",
        "190113                            Occupational Therapists   99940\n",
-       "177694      Business and Financial Operations Occupations   99930\n",
-       "179963                       Operations Research Analysts   99930"
+       "179963                       Operations Research Analysts   99930\n",
+       "179127                   Financial Specialists, All Other   99930"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
